# framework.uifw.efl-assist

./: .gitignore  CMakeLists.txt
include/: efl_assist.h  efl_assist_editfield.h  efl_assist_events.h  efl_assist_image_effect.h  efl_assist_theme.h
packaging/: efl-assist.spec
po/: POTFILES.in
src/: CMakeLists.txt
src/graphics/: efl_assist_image_effect.c
src/include/: efl_assist_popup.h  efl_assist_private.h  efl_assist_screen_reader.h
src/ui/: efl_assist.c  efl_assist_collect_color.c  efl_assist_events.c  efl_assist_screen_reader.c  efl_assist_theme.c  efl_assist_theme_color.c  efl_assist_theme_font.c
src/ui/elementary/: efl_assist_editfield.c  efl_assist_popup.c
wearable/: CMakeLists.txt  Makefile  efl-assist.pc
wearable/po/: CMakeLists.txt  he.po  hi.po  lt.po  ne.po  si.po  tr_TR.po  uk.po
wearable/src/examples/: CMakeLists.txt  ea_cutlink_01.c  ea_cutlink_01.manifest  test.txt
wearable/src/include/: efl_assist.h  efl_assist_cutlink.h  efl_assist_editfield.h  efl_assist_events.h  efl_assist_fastscroll.h  efl_assist_image_effect.h  efl_assist_popup.h  efl_assist_private.h  efl_assist_screen_reader.h
wearable/src/lib/: CMakeLists.txt  efl_assist_cutlink.c  efl_assist_editfield.c  efl_assist_events.c  efl_assist_fastscroll.c  efl_assist_image_effect.c  efl_assist_popup.c  efl_assist_screen_reader.c
